--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang chủ bán hàng</title>
+    <title>Trang bán hàng</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header>
-    <h1>Cửa hàng Online</h1>
-    <nav>
-        <a href="cart.html">Giỏ hàng</a>
-        <a href="orders.html">Lịch sử đơn hàng</a>
-    </nav>
+    <h1>Shop Online</h1>
+    <div class="nav-links">
+        <a href="cart.html">Giỏ hàng 🛒</a>
+        <a href="orders.html">Đơn hàng</a>
+    </div>
 </header>
 
-<main>
-    <h2>Sản phẩm</h2>
-    <div id="product-list"></div>
-</main>
+<div class="product-list" id="product-list"></div>
 
 <script src="js/index.js"></script>
 </body>
