--- a/order-detail.html
+++ b/order-detail.html
@@ -9,14 +9,13 @@
 <body>
 <header>
     <h1>Chi tiết đơn hàng</h1>
-    <nav>
-        <a href="orders.html">Quay lại Lịch sử đơn hàng</a>
-    </nav>
+    <div class="nav-links">
+        <a href="index.html">Trang chủ</a>
+        <a href="orders.html">Đơn hàng</a>
+    </div>
 </header>
 
-<main>
-    <div id="order-detail"></div>
-</main>
+<div id="order-detail"></div>
 
 <script src="js/order-detail.js"></script>
 </body>
