--- a/orders.html
+++ b/orders.html
@@ -9,14 +9,13 @@
 <body>
 <header>
     <h1>Lịch sử đơn hàng</h1>
-    <nav>
+    <div class="nav-links">
         <a href="index.html">Trang chủ</a>
-    </nav>
+        <a href="cart.html">Giỏ hàng</a>
+    </div>
 </header>
 
-<main>
-    <div id="orders-list"></div>
-</main>
+<div id="order-list"></div>
 
 <script src="js/orders.js"></script>
 </body>
