--- a/cart.html
+++ b/cart.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giỏ hàng</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Giỏ hàng</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
+  <header>
     <h1>Giỏ hàng</h1>
-    <div class="nav-links">
-        <a href="index.html">Trang chủ</a>
-        <a href="orders.html">Đơn hàng</a>
-    </div>
-</header>
+    <nav>
+      <a href="index.html">Trang chủ</a> |
+      <a href="checkout.html">Thanh toán</a> |
+      <a href="orders.html">Đơn hàng của tôi</a>
+    </nav>
+  </header>
 
-<div class="cart-items" id="cart-items"></div>
-<div class="cart-total" id="cart-total"></div>
-<button onclick="checkout()">Thanh toán</button>
+  <main>
+    <h2>Danh sách giỏ hàng</h2>
+    <table id="cart-table">
+      <thead>
+        <tr>
+          <th>Sản phẩm</th>
+          <th>Giá</th>
+          <th>Số lượng</th>
+          <th>Thành tiền</th>
+          <th>Xóa</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <h3 id="cart-total">Tổng cộng: 0đ</h3>
+    <a href="checkout.html" class="btn">Tiến hành thanh toán</a>
+  </main>
 
-<script src="js/cart.js"></script>
+  <footer>
+    <p>&copy; 2025 Website Bán Hàng</p>
+  </footer>
+
+  <script src="js/cart.js"></script>
 </body>
 </html>
