--- a/checkout.html
+++ b/checkout.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanh toán</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thanh toán</title>
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- EmailJS SDK -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+      emailjs.init("a3vWPSgpFhjRHox-G"); // Public Key
+    })();
+  </script>
 </head>
 <body>
-<header>
-    <h1>Thanh toán</h1>
-    <div class="nav-links">
-        <a href="index.html">Trang chủ</a>
-        <a href="cart.html">Giỏ hàng</a>
-    </div>
-</header>
+  <header>
+    <h1>Thanh toán đơn hàng</h1>
+    <nav>
+      <a href="index.html">Trang chủ</a> |
+      <a href="cart.html">Giỏ hàng</a> |
+      <a href="orders.html">Đơn hàng của tôi</a>
+    </nav>
+  </header>
 
-<div class="checkout-form">
-    <label for="name">Tên:</label>
-    <input type="text" id="name">
-    <label for="address">Địa chỉ:</label>
-    <input type="text" id="address">
-    <button onclick="placeOrder()">Đặt hàng</button>
-</div>
+  <main>
+    <section class="checkout-form">
+      <h2>Thông tin khách hàng</h2>
+      <form id="checkout-form">
+        <label for="name">Họ và tên:</label>
+        <input type="text" id="name" name="name" required>
 
-<script src="js/checkout.js"></script>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="phone">Số điện thoại:</label>
+        <input type="tel" id="phone" name="phone" required>
+
+        <label for="address">Địa chỉ giao hàng:</label>
+        <textarea id="address" name="address" required></textarea>
+
+        <button type="submit">Đặt hàng</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Website Bán Hàng</p>
+  </footer>
+
+  <script src="js/checkout.js"></script>
 </body>
 </html>
-
