--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang bán hàng</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Website Bán Hàng</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <h1>Shop Online</h1>
-    <div class="nav-links">
-        <a href="cart.html">Giỏ hàng 🛒</a>
-        <a href="orders.html">Đơn hàng</a>
-    </div>
-</header>
+  <header>
+    <h1>Website Bán Hàng</h1>
+    <nav>
+      <a href="index.html">Trang chủ</a> |
+      <a href="cart.html">Giỏ hàng</a> |
+      <a href="orders.html">Đơn hàng của tôi</a>
+    </nav>
+  </header>
 
-<div class="product-list" id="product-list"></div>
+  <main>
+    <h2>Sản phẩm nổi bật</h2>
+    <div class="products" id="product-list"></div>
+  </main>
 
-<script src="js/index.js"></script>
+  <footer>
+    <p>&copy; 2025 Website Bán Hàng</p>
+  </footer>
+
+  <script src="js/index.js"></script>
 </body>
 </html>
-
