--- a/order-detail.html
+++ b/order-detail.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi tiết đơn hàng</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chi tiết đơn hàng</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
+  <header>
     <h1>Chi tiết đơn hàng</h1>
-    <div class="nav-links">
-        <a href="index.html">Trang chủ</a>
-        <a href="orders.html">Đơn hàng</a>
-    </div>
-</header>
+    <nav>
+      <a href="index.html">Trang chủ</a> |
+      <a href="orders.html">Đơn hàng của tôi</a>
+    </nav>
+  </header>
 
-<div id="order-detail"></div>
+  <main>
+    <div id="order-detail"></div>
+  </main>
 
-<script src="js/order-detail.js"></script>
+  <footer>
+    <p>&copy; 2025 Website Bán Hàng</p>
+  </footer>
+
+  <script src="js/order-detail.js"></script>
 </body>
 </html>
