--- a/orders.html
+++ b/orders.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lịch sử đơn hàng</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Đơn hàng của tôi</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <h1>Lịch sử đơn hàng</h1>
-    <div class="nav-links">
-        <a href="index.html">Trang chủ</a>
-        <a href="cart.html">Giỏ hàng</a>
-    </div>
-</header>
+  <header>
+    <h1>Đơn hàng của tôi</h1>
+    <nav>
+      <a href="index.html">Trang chủ</a> |
+      <a href="cart.html">Giỏ hàng</a>
+    </nav>
+  </header>
 
-<div id="order-list"></div>
+  <main>
+    <h2>Lịch sử đơn hàng</h2>
+    <ul id="orders-list"></ul>
+  </main>
 
-<script src="js/orders.js"></script>
+  <footer>
+    <p>&copy; 2025 Website Bán Hàng</p>
+  </footer>
+
+  <script src="js/orders.js"></script>
 </body>
 </html>
